WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23093
REGRESSION (3.2-ToT): Clear button in search field fails to redraw correctly
https://bugs.webkit.org/show_bug.cgi?id=23093
Summary
REGRESSION (3.2-ToT): Clear button in search field fails to redraw correctly
Simon Fraser (smfr)
Reported
2009-01-03 17:04:42 PST
In the attached testcase, type a character into the search field. Note how the Clear button shows up, but only half of it draws.
Attachments
Testcase
(1.83 KB, text/html)
2009-01-03 17:05 PST
,
Simon Fraser (smfr)
no flags
Details
Patch, testcase, changelog
(8.33 KB, patch)
2009-03-10 21:56 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-01-03 17:05:06 PST
Created
attachment 26395
[details]
Testcase
Cameron Zwarich (cpst)
Comment 2
2009-03-10 16:03:44 PDT
I'll take this bug.
Simon Fraser (smfr)
Comment 3
2009-03-10 16:07:17 PDT
<
rdar://problem/6493801&6577037
>
Cameron Zwarich (cpst)
Comment 4
2009-03-10 16:45:12 PDT
Between the
r37126
and
r37300
nightlies, the clear button disappears entirely, but I am not sure if this is the root cause of the bug. I'll see where it goes to being half-drawn.
Cameron Zwarich (cpst)
Comment 5
2009-03-10 17:11:50 PDT
The change from an undrawn clear button and a half-drawn clear button occurs between the
r38676
and
r38683
nightlies. The only relevant change is
r38678
:
http://trac.webkit.org/changeset/38678
Simon, I am not an expert on this code, but it seems to me that the inflation of the rect for repainting is causing the button to be partially drawn, and the real problem occurred earlier when it was no longer drawn at all. What do you think?
Simon Fraser (smfr)
Comment 6
2009-03-10 17:25:56 PDT
I think it would be instructive to debug through clippedOverflowRectForRepaint() and figure out why the rect ends up being wrong.
Cameron Zwarich (cpst)
Comment 7
2009-03-10 18:57:22 PDT
Odd, a local debug build of
r37126
demonstrates the same problematic behaviour. I'll just do as you suggest and debug the problem in ToT instead of trying to find the regression.
Simon Fraser (smfr)
Comment 8
2009-03-10 20:39:33 PDT
I think the real issue here is that no-one tells the clear button to repaint when it is shown or hidden.
Cameron Zwarich (cpst)
Comment 9
2009-03-10 20:44:36 PDT
Simon has a good idea of what causes this bug so I will unassign it.
Simon Fraser (smfr)
Comment 10
2009-03-10 21:54:04 PDT
As a related issue, I found that the cancel button's div is also too short:
bug 24509
.
Simon Fraser (smfr)
Comment 11
2009-03-10 21:56:52 PDT
Created
attachment 28464
[details]
Patch, testcase, changelog
Simon Fraser (smfr)
Comment 12
2009-03-11 12:00:49 PDT
http://trac.webkit.org/changeset/41590
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug