2009-03-11  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein

        https://bugs.webkit.org/show_bug.cgi?id=23093

        When the cancel button in the search field is shown or hidden,
        we need to explicitly setStyle() on the cancel button's renderer,
        to ensure that repaint happens. Changing the style without telling
        the renderer won't work.

        Test: fast/repaint/search-field-cancel.html

        * rendering/RenderTextControlSingleLine.cpp:
        (WebCore::RenderTextControlSingleLine::subtreeHasChanged):
        (WebCore::RenderTextControlSingleLine::updateFromElement):
        (WebCore::RenderTextControlSingleLine::createCancelButtonStyle):
        (WebCore::RenderTextControlSingleLine::updateCancelButtonVisibility):
        (WebCore::RenderTextControlSingleLine::visibilityForCancelButton):
        * rendering/RenderTextControlSingleLine.h:

Canonical link: https://commits.webkit.org/33652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41590 268f45cc-cd09-0410-ab3c-d52691b4dbfc