WebCore/rendering/RenderTextControlSingleLine.h
@@ -76,7 +76,8 @@ private:
     PassRefPtr<RenderStyle> createResultsButtonStyle(const RenderStyle* startStyle) const;
     PassRefPtr<RenderStyle> createCancelButtonStyle(const RenderStyle* startStyle) const;
 
-    void updateCancelButtonVisibility(RenderStyle*) const;
+    void updateCancelButtonVisibility() const;
+    EVisibility visibilityForCancelButton() const;
     const AtomicString& autosaveName() const;
 
     void startSearchEventTimer();
